--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "serve": "^14.2.0",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
