--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
     "short_name": "Join A Board",
     "icons": [
         {
-            "src:" : "/logo-nameless.png",
+            "src" : "/logo-nameless.png",
             "sizes": "740x740",
             "type" : "image/png"
         },
         {
-            "src:" : "./assets/logo.png",
+            "src" : "/logo.png",
             "sizes": "946x632",
             "type" : "image/png"
         }
     ],
     "theme_color": "#FFFFFF",
-    "background-color": "#FFFFFF",
+    "background_color": "#FFFFFF",
     "start_url": "https://colette-exe.github.io/join-a-board/",
     "display": "standalone",
     "orientation": "portrait"
