manifext.json fix (3/?)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,7 +15,7 @@
     ],
     "theme_color": "#FFFFFF",
     "background_color": "#FFFFFF",
-    "start_url": "https://colette-exe.github.io/join-a-board/",
+    "start_url": "/join-a-board/",
     "display": "standalone",
     "orientation": "portrait"
 }
