--- a/manifest.json
+++ b/manifest.json
@@ -3,19 +3,19 @@
     "short_name": "Join A Board",
     "icons": [
         {
-            "src" : "logo-nameless.png",
+            "src" : "./logo-nameless.png",
             "sizes": "740x740",
             "type" : "image/png"
         },
         {
-            "src" : "logo.png",
+            "src" : "./logo.png",
             "sizes": "946x632",
             "type" : "image/png"
         }
     ],
     "theme_color": "#FFFFFF",
     "background_color": "#FFFFFF",
-    "start_url": ".",
+    "start_url": "/join-a-board/",
     "display": "standalone",
     "orientation": "portrait"
 }
